--- a/operations/eirini.yaml
+++ b/operations/eirini.yaml
@@ -24,4 +24,19 @@
       release: eirini
       properties:
         opi:
-
+          ingress_endpoint: "((ingress_endpoint))"
+          external_ips: "((external_ips))"
+          use_registry_ingress: "((use_registry_ingress))"
+          registry_address: "((registry_address))"
+          cc_internal_api: "((cc_internal_api))"
+          cc_certs_secret_name: "((cc_certs_secret_name))"
+          nats_address: "((nats_address))"
+          doppler_address: "((doppler_address))"
+          doppler-cert: "((doppler-cert))"
+          doppler-cert-key: "((doppler-cert-key))"
+          cc-server-crt: "((cc-server-crt))"
+          cc-server-crt-key: "((cc-server-crt-key))"
+          internal-ca-cert: "((internal-ca-cert))"
+          eirini-client-crt: "((eirini-client-crt))"
+          eirini-client-crt-key: "((eirini-client-crt-key))"
+          internal-ca-cert: "((internal-ca-cert))"
