add additional params and operation files
Signed-off-by: Julian Skupnjak <skupnjak@de.ibm.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "src/eirini-release"]
 	path = src/eirini-release
 	url = https://github.com/cloudfoundry-incubator/eirini-release.git
+  branch = standalone-eirini
