--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,9 +1,13 @@
 ---
-name: eirini
+name: eirini-installer
 manifest_version: v1.0.0
 stemcells:
 - alias: default
   os: ubuntu-trusty
-  version: 3147
-
-
+  version: "3586.100"
+update:
+  canaries: 1
+  canary_watch_time: 30000-1200000
+  max_in_flight: 1
+  serial: false
+  update_watch_time: 5000-1200000
