--- a/operations/eirini.yaml
+++ b/operations/eirini.yaml
@@ -48,6 +48,7 @@
         loggregator-agent-cert: "((loggregator_tls_agent.certificate))"
         loggregator-agent-cert-key: "((loggregator_tls_agent.private_key))"
         loggregator-agent-ca: "((loggregator_tls_agent.ca))"
+        nats_password: "((nats_password))"
 
 - type: replace
   path: /variables/name=loggregator_tls_agent/options/alternative_names?
