--- a/operations/eirini.yaml
+++ b/operations/eirini.yaml
@@ -49,6 +49,7 @@
         loggregator-agent-cert-key: "((loggregator_tls_agent.private_key))"
         loggregator-agent-ca: "((loggregator_tls_agent.ca))"
         nats_password: "((nats_password))"
+        bits_password: "((bits_service_signing_password))"
 
 - type: replace
   path: /variables/name=loggregator_tls_agent/options/alternative_names?
